chore: Fix spacing in sidebar with the content

--- a/src/components/Layout.module.scss
+++ b/src/components/Layout.module.scss
@@ -2,6 +2,7 @@
   min-height: 100vh;
   display: grid;
   grid-template-columns: auto minmax(0, 1fr);
+  grid-gap: 1rem;
   max-width: 1200px;
   margin: 0 auto;
 }
