--- a/src/components/Sidebar.module.scss
+++ b/src/components/Sidebar.module.scss
@@ -1,6 +1,4 @@
 .sidebar {
-  padding: 1rem;
-
   ul {
     margin: 0;
     padding-left: 1rem;
